<resources>
    <string name="app_name">Hello\nguy</string>

    <string name="insertData">插入</string>
    <string name="deleteData">删除</string>
    <string name="updateData">更新</string>
    <string name="queryData">查询</string>

    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="sex">Sex</string>

    <string name="insert_text_name">姓名</string>
    <string name="insert_text_age">年龄</string>
    <string name="insert_text_sex">性别</string>
    <string name="insert_confirm">确认插入</string>
    <string name="insert_cancel">取消插入</string>
    <string name="delete_text_id">ID</string>
    <string name="delete_confirm">确定删除</string>
    <string name="delete_cancel">取消删除</string>
    <string name="update_text_id">ID</string>
    <string name="update_text_name">姓名</string>
    <string name="update_text_age">年龄</string>
    <string name="update_text_sex">性别</string>
    <string name="update_confirm">确认更新</string>
    <string name="update_cancel">取消更新</string>

    <string name="main_textview">database not chang</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="tab_1">导航</string>
    <string name="tab_2">音乐</string>
    <string name="tab_3">车辆</string>
    <string name="tab_4">设置</string>
    <string name="tab_5">玩乐</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="title_activity_main2">Main2Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
