<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="50dp"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:paddingTop="50dp">

    <TextView
        android:id="@+id/db_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="SQLite数据库操作" />

    <!-- 增加 -->

    <Button
        android:id="@+id/btn_insert"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/db_text"
        android:text="@string/insertData" />

    <!-- 删除 -->

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_insert"
        android:text="@string/deleteData" />

    <!-- 修改 -->

    <Button
        android:id="@+id/btn_update"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_delete"
        android:text="@string/updateData" />

    <!-- 查询 -->

    <Button
        android:id="@+id/btn_query"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_update"
        android:text="@string/queryData" />

    <!-- 展现查询的数据-->
    <ListView
        android:id="@+id/list_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/btn_query" />

</RelativeLayout>
