<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <LinearLayout
        android:id="@+id/insert_linearLayout_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/insert_text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insert_text_name"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/insert_edit_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:labelFor="@+id/insert_edit_name" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/insert_linearLayout_age"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/insert_linearLayout_name">

        <TextView
            android:id="@+id/insert_text_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insert_text_age"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/insert_edit_age"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:labelFor="@+id/insert_edit_age" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/insert_linearLayout_age"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/insert_text_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insert_text_sex"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/insert_edit_sex"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:labelFor="@+id/insert_edit_sex" />
    </LinearLayout>

    <Button
        android:id="@+id/insert_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout"
        android:text="@string/insert_confirm" />

    <Button
        android:id="@+id/insert_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/linearLayout"
        android:text="@string/insert_cancel" />

</RelativeLayout>
